--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 
-build/main.o
-build/rot_3.lst
-build/main.d
-build/rot_3.map
-build/rot_3.lst
-build/rot_3.map
-build/rot_3.lst
-build/rot_3.lst
+build/*
 gw_workaround.rsf
+alphab~1/*
